--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ baseurl: ""
 url: "https://Theprashil.github.io"
 
 # THEME-SPECIFIC CONFIGURATION
-title: My site                                   # site's title
-description: "A website with blog posts and pages"      # used by search engines
+title: 0xbla Blogs                                   # site's title
+description: "A website where i share my infosec writeups"      # used by search engines
 avatar: assets/img/triangle.png                         # Empty for no avatar in navbar
 favicon: assets/favicon.ico                             # Icon displayed in the tab
 
@@ -12,8 +12,7 @@ favicon: assets/favicon.ico                             # Icon displayed in the 
 header_text: Change <code>header_text</code> in <code>_config.yml</code>  # Change Blog header text
 header_feature_image: assets/img/pexels/triangular.jpeg
 footer_text: >
-  Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
-
+  
 # Blog
 excerpt: true                                           # Or "truncate" (first 250 characters), "false" to disable
 post_navigation: true
