--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ baseurl: ""
 url: "https://Theprashil.github.io"
 
 # THEME-SPECIFIC CONFIGURATION
-title: 0xbla Blogs                                   # site's title
+title: ickl0cc Blogs                                   # site's title
 description: "A website where i share my infosec writeups"      # used by search engines
 avatar: assets/img/triangle.png                         # Empty for no avatar in navbar
 favicon: assets/favicon.ico                             # Icon displayed in the tab
@@ -11,7 +11,7 @@ favicon: assets/favicon.ico                             # Icon displayed in the 
 # Header and footer text
 header_text: Change <code>header_text</code> in <code>_config.yml</code>  # Change Blog header text
 header_feature_image: assets/img/pexels/triangular.jpeg
-footer_text: >
+
   
 # Blog
 excerpt: true                                           # Or "truncate" (first 250 characters), "false" to disable
