--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ avatar: assets/img/triangle.png                         # Empty for no avatar in
 favicon: assets/favicon.ico                             # Icon displayed in the tab
 
 # Header and footer text
-header_text: Change <code>header_text</code> in <code>_config.yml</code>  # Change Blog header text
-header_feature_image: assets/img/pexels/triangular.jpeg
+#header_text: Change <code>header_text</code> in <code>_config.yml</code>  # Change Blog header text
+#header_feature_image: assets/img/pexels/triangular.jpeg
 
   
 # Blog
