--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ favicon: assets/hacker.ico                        # Icon displayed in the tab
 # Header and footer text
 header_text: ""
 header_feature_image: ""
-footer_text: 
+footer_text: 2020
 
   
 # Blog
