--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: "https://Theprashil.github.io"
 # THEME-SPECIFIC CONFIGURATION
 title: ickl0cc Blogs                                   # site's title
 description: "A website where i share my infosec writeups"      # used by search engines
-avatar: assets/img/triangle.png                         # Empty for no avatar in navbar
+avatar: assets/img/hacker.jpg                         # Empty for no avatar in navbar
 favicon: assets/hacker.ico                        # Icon displayed in the tab
 
 # Header and footer text
