--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ avatar: assets/img/hacker.jpg                         # Empty for no avatar in n
 favicon: assets/hacker.ico                        # Icon displayed in the tab
 
 # Header and footer text
-header_text: The quieter you become, the more you are able to hear.
+header_text: "The quieter you become, the more you are able to hear."
 header_feature_image: assets/kali.jpg
 footer_text: 2020
 
